Fix center alignment to sign-in-button

--- a/style.css
+++ b/style.css
@@ -184,7 +184,6 @@ p
 .sign-up-button
 {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     position: relative;
